deploy: ca595ce0a044af463b4cdf03bc07976c946eded3

--- a/tutorials/xyz.ipynb
+++ b/tutorials/xyz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be097a89",
+   "id": "7e48ff03",
    "metadata": {},
    "source": [
     "# Exporting and Importing\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dab6a3e",
+   "id": "86e845f9",
    "metadata": {},
    "source": [
     "GRANAD lets you save orbitals to xyz files. It also offers rudimentary support for loading orbitals from xyz files. For demonstration, we will create a triangular flake, print its xyz representation, save it to file and reload it."
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0dd74fe9",
+   "id": "14d098f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T10:39:32.880613Z",
-     "iopub.status.busy": "2025-01-28T10:39:32.880426Z",
-     "iopub.status.idle": "2025-01-28T10:39:37.208899Z",
-     "shell.execute_reply": "2025-01-28T10:39:37.208203Z"
+     "iopub.execute_input": "2025-01-28T17:21:00.786766Z",
+     "iopub.status.busy": "2025-01-28T17:21:00.786584Z",
+     "iopub.status.idle": "2025-01-28T17:21:04.832288Z",
+     "shell.execute_reply": "2025-01-28T17:21:04.831681Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f11aa844",
+   "id": "cd509377",
    "metadata": {},
    "source": [
     "We can look at only the atoms in this file. They are given as a dictionary. The type of atom is the key. The value is all positions where atoms of this type are."
@@ -46,13 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfa16752",
+   "id": "48f299ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T10:39:37.211324Z",
-     "iopub.status.busy": "2025-01-28T10:39:37.210882Z",
-     "iopub.status.idle": "2025-01-28T10:39:37.228281Z",
-     "shell.execute_reply": "2025-01-28T10:39:37.227772Z"
+     "iopub.execute_input": "2025-01-28T17:21:04.834585Z",
+     "iopub.status.busy": "2025-01-28T17:21:04.834165Z",
+     "iopub.status.idle": "2025-01-28T17:21:04.852424Z",
+     "shell.execute_reply": "2025-01-28T17:21:04.851868Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'list'>, {'C': [['-4.92', '-4.260844986619438', '0.0'], ['-6.15', '-2.130422493309719', '0.0'], ['-2.46', '-4.260844986619438', '0.0'], ['-3.69', '-2.130422493309719', '0.0'], ['-4.92', '0.0', '0.0'], ['0.0', '-4.260844986619438', '0.0'], ['-1.23', '-2.130422493309719', '0.0'], ['-2.46', '0.0', '0.0'], ['-3.69', '2.130422493309719', '0.0'], ['2.46', '-4.260844986619438', '0.0'], ['1.23', '-2.130422493309719', '0.0'], ['0.0', '0.0', '0.0'], ['-1.23', '2.130422493309719', '0.0'], ['-2.46', '4.260844986619438', '0.0'], ['4.92', '-4.260844986619438', '0.0'], ['3.69', '-2.130422493309719', '0.0'], ['2.46', '0.0', '0.0'], ['1.23', '2.130422493309719', '0.0'], ['0.0', '4.260844986619438', '0.0'], ['-1.23', '6.391267479929157', '0.0'], ['6.15', '-2.130422493309719', '0.0'], ['4.92', '0.0', '0.0'], ['3.69', '2.130422493309719', '0.0'], ['2.46', '4.260844986619438', '0.0'], ['1.23', '6.391267479929157', '0.0'], ['-6.15', '-3.5507041555161982', '0.0'], ['-3.69', '-3.5507041555161982', '0.0'], ['-4.92', '-1.4202816622064793', '0.0'], ['-1.23', '-3.5507041555161982', '0.0'], ['-2.46', '-1.4202816622064793', '0.0'], ['-3.69', '0.7101408311032397', '0.0'], ['1.23', '-3.5507041555161982', '0.0'], ['0.0', '-1.4202816622064793', '0.0'], ['-1.23', '0.7101408311032397', '0.0'], ['-2.46', '2.8405633244129587', '0.0'], ['3.69', '-3.5507041555161982', '0.0'], ['2.46', '-1.4202816622064793', '0.0'], ['1.23', '0.7101408311032397', '0.0'], ['0.0', '2.8405633244129587', '0.0'], ['-1.23', '4.970985817722678', '0.0'], ['6.15', '-3.5507041555161982', '0.0'], ['4.92', '-1.4202816622064793', '0.0'], ['3.69', '0.7101408311032397', '0.0'], ['2.46', '2.8405633244129587', '0.0'], ['1.23', '4.970985817722678', '0.0'], ['0.0', '7.1014083110323964', '0.0']]})\n"
+      "defaultdict(<class 'list'>, {'C': [['0.7101408311032396', '1.23', '0.0'], ['2.1304224933097187', '1.23', '0.0'], ['0.0', '2.46', '0.0'], ['0.7101408311032396', '3.6900000000000004', '0.0'], ['2.1304224933097187', '3.6900000000000004', '0.0'], ['2.840563324412959', '2.46', '0.0'], ['4.260844986619438', '2.46', '0.0'], ['4.970985817722679', '3.6900000000000004', '0.0'], ['6.391267479929158', '3.6900000000000004', '0.0'], ['0.0', '4.92', '0.0'], ['0.7101408311032396', '6.1499999999999995', '0.0'], ['2.1304224933097187', '6.1499999999999995', '0.0'], ['2.840563324412959', '4.92', '0.0'], ['4.260844986619438', '4.92', '0.0'], ['4.970985817722679', '6.1499999999999995', '0.0'], ['6.391267479929158', '6.1499999999999995', '0.0'], ['7.1014083110323964', '4.92', '0.0'], ['8.521689973238875', '4.92', '0.0'], ['9.231830804342117', '6.1499999999999995', '0.0'], ['10.652112466548594', '6.1499999999999995', '0.0'], ['0.0', '7.38', '0.0'], ['0.7101408311032396', '8.61', '0.0'], ['2.1304224933097187', '8.61', '0.0'], ['2.840563324412959', '7.38', '0.0'], ['4.260844986619438', '7.38', '0.0'], ['4.970985817722679', '8.61', '0.0'], ['6.391267479929158', '8.61', '0.0'], ['7.1014083110323964', '7.38', '0.0'], ['8.521689973238875', '7.38', '0.0'], ['9.231830804342117', '8.61', '0.0'], ['10.652112466548594', '8.61', '0.0'], ['11.362253297651833', '7.38', '0.0'], ['0.0', '9.84', '0.0'], ['0.7101408311032396', '11.07', '0.0'], ['2.1304224933097187', '11.07', '0.0'], ['2.840563324412959', '9.84', '0.0'], ['4.260844986619438', '9.84', '0.0'], ['4.970985817722679', '11.07', '0.0'], ['6.391267479929158', '11.07', '0.0'], ['7.1014083110323964', '9.84', '0.0'], ['8.521689973238875', '9.84', '0.0'], ['0.0', '12.3', '0.0'], ['0.7101408311032396', '13.530000000000001', '0.0'], ['2.1304224933097187', '13.530000000000001', '0.0'], ['2.840563324412959', '12.3', '0.0'], ['4.260844986619438', '12.3', '0.0']]})\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44223686",
+   "id": "55e193b7",
    "metadata": {},
    "source": [
     "If you supply no name to the to_xyz method, it will  return the string"
@@ -79,13 +79,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "782f282d",
+   "id": "0ffea62a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T10:39:37.230207Z",
-     "iopub.status.busy": "2025-01-28T10:39:37.229824Z",
-     "iopub.status.idle": "2025-01-28T10:39:37.236362Z",
-     "shell.execute_reply": "2025-01-28T10:39:37.235869Z"
+     "iopub.execute_input": "2025-01-28T17:21:04.854369Z",
+     "iopub.status.busy": "2025-01-28T17:21:04.853951Z",
+     "iopub.status.idle": "2025-01-28T17:21:04.859752Z",
+     "shell.execute_reply": "2025-01-28T17:21:04.859318Z"
     }
    },
    "outputs": [
@@ -95,52 +95,52 @@
      "text": [
       "46\n",
       "\n",
-      "C -4.92 -4.260844986619438 0.0\n",
-      "C -6.15 -2.130422493309719 0.0\n",
-      "C -2.46 -4.260844986619438 0.0\n",
-      "C -3.69 -2.130422493309719 0.0\n",
-      "C -4.92 0.0 0.0\n",
-      "C 0.0 -4.260844986619438 0.0\n",
-      "C -1.23 -2.130422493309719 0.0\n",
-      "C -2.46 0.0 0.0\n",
-      "C -3.69 2.130422493309719 0.0\n",
-      "C 2.46 -4.260844986619438 0.0\n",
-      "C 1.23 -2.130422493309719 0.0\n",
-      "C 0.0 0.0 0.0\n",
-      "C -1.23 2.130422493309719 0.0\n",
-      "C -2.46 4.260844986619438 0.0\n",
-      "C 4.92 -4.260844986619438 0.0\n",
-      "C 3.69 -2.130422493309719 0.0\n",
-      "C 2.46 0.0 0.0\n",
-      "C 1.23 2.130422493309719 0.0\n",
-      "C 0.0 4.260844986619438 0.0\n",
-      "C -1.23 6.391267479929157 0.0\n",
-      "C 6.15 -2.130422493309719 0.0\n",
-      "C 4.92 0.0 0.0\n",
-      "C 3.69 2.130422493309719 0.0\n",
-      "C 2.46 4.260844986619438 0.0\n",
-      "C 1.23 6.391267479929157 0.0\n",
-      "C -6.15 -3.5507041555161982 0.0\n",
-      "C -3.69 -3.5507041555161982 0.0\n",
-      "C -4.92 -1.4202816622064793 0.0\n",
-      "C -1.23 -3.5507041555161982 0.0\n",
-      "C -2.46 -1.4202816622064793 0.0\n",
-      "C -3.69 0.7101408311032397 0.0\n",
-      "C 1.23 -3.5507041555161982 0.0\n",
-      "C 0.0 -1.4202816622064793 0.0\n",
-      "C -1.23 0.7101408311032397 0.0\n",
-      "C -2.46 2.8405633244129587 0.0\n",
-      "C 3.69 -3.5507041555161982 0.0\n",
-      "C 2.46 -1.4202816622064793 0.0\n",
-      "C 1.23 0.7101408311032397 0.0\n",
-      "C 0.0 2.8405633244129587 0.0\n",
-      "C -1.23 4.970985817722678 0.0\n",
-      "C 6.15 -3.5507041555161982 0.0\n",
-      "C 4.92 -1.4202816622064793 0.0\n",
-      "C 3.69 0.7101408311032397 0.0\n",
-      "C 2.46 2.8405633244129587 0.0\n",
-      "C 1.23 4.970985817722678 0.0\n",
-      "C 0.0 7.1014083110323964 0.0\n",
+      "C 0.7101408311032396 1.23 0.0\n",
+      "C 2.1304224933097187 1.23 0.0\n",
+      "C 0.0 2.46 0.0\n",
+      "C 0.7101408311032396 3.6900000000000004 0.0\n",
+      "C 2.1304224933097187 3.6900000000000004 0.0\n",
+      "C 2.840563324412959 2.46 0.0\n",
+      "C 4.260844986619438 2.46 0.0\n",
+      "C 4.970985817722679 3.6900000000000004 0.0\n",
+      "C 6.391267479929158 3.6900000000000004 0.0\n",
+      "C 0.0 4.92 0.0\n",
+      "C 0.7101408311032396 6.1499999999999995 0.0\n",
+      "C 2.1304224933097187 6.1499999999999995 0.0\n",
+      "C 2.840563324412959 4.92 0.0\n",
+      "C 4.260844986619438 4.92 0.0\n",
+      "C 4.970985817722679 6.1499999999999995 0.0\n",
+      "C 6.391267479929158 6.1499999999999995 0.0\n",
+      "C 7.1014083110323964 4.92 0.0\n",
+      "C 8.521689973238875 4.92 0.0\n",
+      "C 9.231830804342117 6.1499999999999995 0.0\n",
+      "C 10.652112466548594 6.1499999999999995 0.0\n",
+      "C 0.0 7.38 0.0\n",
+      "C 0.7101408311032396 8.61 0.0\n",
+      "C 2.1304224933097187 8.61 0.0\n",
+      "C 2.840563324412959 7.38 0.0\n",
+      "C 4.260844986619438 7.38 0.0\n",
+      "C 4.970985817722679 8.61 0.0\n",
+      "C 6.391267479929158 8.61 0.0\n",
+      "C 7.1014083110323964 7.38 0.0\n",
+      "C 8.521689973238875 7.38 0.0\n",
+      "C 9.231830804342117 8.61 0.0\n",
+      "C 10.652112466548594 8.61 0.0\n",
+      "C 11.362253297651833 7.38 0.0\n",
+      "C 0.0 9.84 0.0\n",
+      "C 0.7101408311032396 11.07 0.0\n",
+      "C 2.1304224933097187 11.07 0.0\n",
+      "C 2.840563324412959 9.84 0.0\n",
+      "C 4.260844986619438 9.84 0.0\n",
+      "C 4.970985817722679 11.07 0.0\n",
+      "C 6.391267479929158 11.07 0.0\n",
+      "C 7.1014083110323964 9.84 0.0\n",
+      "C 8.521689973238875 9.84 0.0\n",
+      "C 0.0 12.3 0.0\n",
+      "C 0.7101408311032396 13.530000000000001 0.0\n",
+      "C 2.1304224933097187 13.530000000000001 0.0\n",
+      "C 2.840563324412959 12.3 0.0\n",
+      "C 4.260844986619438 12.3 0.0\n",
       "\n"
      ]
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4300af49",
+   "id": "6e6cc7f2",
    "metadata": {},
    "source": [
     "To save this to a file, do"
@@ -160,13 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b88c50b4",
+   "id": "7bb3708b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T10:39:37.238101Z",
-     "iopub.status.busy": "2025-01-28T10:39:37.237889Z",
-     "iopub.status.idle": "2025-01-28T10:39:37.245934Z",
-     "shell.execute_reply": "2025-01-28T10:39:37.245368Z"
+     "iopub.execute_input": "2025-01-28T17:21:04.861626Z",
+     "iopub.status.busy": "2025-01-28T17:21:04.861290Z",
+     "iopub.status.idle": "2025-01-28T17:21:04.866990Z",
+     "shell.execute_reply": "2025-01-28T17:21:04.866514Z"
     }
    },
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74cdbba0",
+   "id": "1ed34cca",
    "metadata": {},
    "source": [
     "Reloading is limited: all atoms in the xyz file get the same group id by default."
@@ -185,13 +185,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4c47ef83",
+   "id": "73017495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T10:39:37.247715Z",
-     "iopub.status.busy": "2025-01-28T10:39:37.247538Z",
-     "iopub.status.idle": "2025-01-28T10:39:37.260462Z",
-     "shell.execute_reply": "2025-01-28T10:39:37.260026Z"
+     "iopub.execute_input": "2025-01-28T17:21:04.868868Z",
+     "iopub.status.busy": "2025-01-28T17:21:04.868495Z",
+     "iopub.status.idle": "2025-01-28T17:21:04.880806Z",
+     "shell.execute_reply": "2025-01-28T17:21:04.880337Z"
     }
    },
    "outputs": [],
