deploy: b78a3aa147e0943e924c9acd99689cacb9b7faa3

--- a/tutorials/d_basis_handling.ipynb
+++ b/tutorials/d_basis_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1cdc8415",
+   "id": "553b0bff",
    "metadata": {},
    "source": [
     "# Basis Handling\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4c85e4",
+   "id": "331e17ce",
    "metadata": {},
    "source": [
     "## Default basis\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "04d9c779",
+   "id": "92c55fab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:24:04.436020Z",
-     "iopub.status.busy": "2025-01-28T17:24:04.435548Z",
-     "iopub.status.idle": "2025-01-28T17:24:09.016280Z",
-     "shell.execute_reply": "2025-01-28T17:24:09.015521Z"
+     "iopub.execute_input": "2025-01-28T18:47:44.112019Z",
+     "iopub.status.busy": "2025-01-28T18:47:44.111831Z",
+     "iopub.status.idle": "2025-01-28T18:47:48.145297Z",
+     "shell.execute_reply": "2025-01-28T18:47:48.144662Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
     "import jax.numpy as jnp\n",
     "from granad import MaterialCatalog\n",
     "\n",
-    "chain  = MaterialCatalog.get(\"metal_1d\")\n",
+    "chain  = MaterialCatalog.get(\"chain\")\n",
     "flake = chain.cut_flake( unit_cells = 10 )\n",
     "site_occupations = flake.initial_density_matrix.diagonal() # site basis\n",
     "energy_occupations = flake.initial_density_matrix_e.diagonal() # energy basis"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52adc782",
+   "id": "dfd8a2e0",
    "metadata": {},
    "source": [
     "Additionally, should you be unsure, the site basis is always given by appending \"_x\"."
@@ -54,13 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a71266f1",
+   "id": "7644d76e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:24:09.018980Z",
-     "iopub.status.busy": "2025-01-28T17:24:09.018531Z",
-     "iopub.status.idle": "2025-01-28T17:24:09.051404Z",
-     "shell.execute_reply": "2025-01-28T17:24:09.050827Z"
+     "iopub.execute_input": "2025-01-28T18:47:48.147584Z",
+     "iopub.status.busy": "2025-01-28T18:47:48.147249Z",
+     "iopub.status.idle": "2025-01-28T18:47:48.174908Z",
+     "shell.execute_reply": "2025-01-28T18:47:48.174415Z"
     }
    },
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3dbe03",
+   "id": "a776b562",
    "metadata": {},
    "source": [
     "There is also a built-in function for basis transformation"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "737dc5d1",
+   "id": "1317557a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:24:09.053490Z",
-     "iopub.status.busy": "2025-01-28T17:24:09.053292Z",
-     "iopub.status.idle": "2025-01-28T17:24:09.058393Z",
-     "shell.execute_reply": "2025-01-28T17:24:09.057905Z"
+     "iopub.execute_input": "2025-01-28T18:47:48.176781Z",
+     "iopub.status.busy": "2025-01-28T18:47:48.176600Z",
+     "iopub.status.idle": "2025-01-28T18:47:48.181358Z",
+     "shell.execute_reply": "2025-01-28T18:47:48.180775Z"
     }
    },
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c735ee",
+   "id": "9b1e0c9d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "877f66e7",
+   "id": "431645e0",
    "metadata": {},
    "source": [
     "Transition dipole moments can be displayed in energy basis"
@@ -130,13 +130,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9053a514",
+   "id": "3cce1dbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:24:09.060219Z",
-     "iopub.status.busy": "2025-01-28T17:24:09.060034Z",
-     "iopub.status.idle": "2025-01-28T17:24:09.512913Z",
-     "shell.execute_reply": "2025-01-28T17:24:09.512277Z"
+     "iopub.execute_input": "2025-01-28T18:47:48.183229Z",
+     "iopub.status.busy": "2025-01-28T18:47:48.182867Z",
+     "iopub.status.idle": "2025-01-28T18:47:48.590169Z",
+     "shell.execute_reply": "2025-01-28T18:47:48.589550Z"
     }
    },
    "outputs": [
