--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ceb2813",
+   "id": "468b1758",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be4ae5f",
+   "id": "69dd1bf0",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5446ff4",
+   "id": "430a10b4",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddb0386",
+   "id": "99bdc558",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e46551f",
+   "id": "e210ebe5",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd95bc5",
+   "id": "b6ee1870",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f4f96eb",
+   "id": "17ba59c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:40.901447Z",
-     "iopub.status.busy": "2025-01-28T17:21:40.901267Z",
-     "iopub.status.idle": "2025-01-28T17:21:45.061268Z",
-     "shell.execute_reply": "2025-01-28T17:21:45.060716Z"
+     "iopub.execute_input": "2025-01-28T18:45:34.170072Z",
+     "iopub.status.busy": "2025-01-28T18:45:34.169875Z",
+     "iopub.status.idle": "2025-01-28T18:45:37.712719Z",
+     "shell.execute_reply": "2025-01-28T18:45:37.712201Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca76b98b",
+   "id": "de0d69d0",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b4dd5f",
+   "id": "58b05012",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1393b6d6",
+   "id": "1c371d26",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab0b29f",
+   "id": "d43f568b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e64baa",
+   "id": "8a76e2cf",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c7f600",
+   "id": "8b4c593b",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d39bc5c",
+   "id": "148fc6c6",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b0d3f8",
+   "id": "357e1a26",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cda441dd",
+   "id": "0e19a0e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:45.063468Z",
-     "iopub.status.busy": "2025-01-28T17:21:45.063196Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.169682Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.169086Z"
+     "iopub.execute_input": "2025-01-28T18:45:37.714767Z",
+     "iopub.status.busy": "2025-01-28T18:45:37.714503Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.556821Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.556314Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9429703",
+   "id": "ebebf4fc",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19d41e99",
+   "id": "cd3139a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.171968Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.171550Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.175106Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.174422Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.558612Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.558422Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.562103Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.561429Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bed67f5",
+   "id": "6e55a277",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb54e19f",
+   "id": "63696052",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c126e9",
+   "id": "6b9c07fd",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5bfee5f",
+   "id": "2cf41854",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b1ce6f6",
+   "id": "3d3c8e40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.177112Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.176732Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.223368Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.222815Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.563930Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.563604Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.606099Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.605555Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3a70c6",
+   "id": "e6c4c334",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8426795",
+   "id": "390da57a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.225222Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.225024Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.296280Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.295764Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.607815Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.607619Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.671417Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.670800Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b274a3",
+   "id": "388fcb00",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f28cdbb",
+   "id": "e21ae581",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "178d30d3",
+   "id": "852bec50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.298340Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.297965Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.330116Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.329530Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.673235Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.673049Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.700721Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.700229Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "528e1411",
+   "id": "fd179693",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b19f674",
+   "id": "06f76cc0",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5630a427",
+   "id": "fffe1510",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0cf4ff2",
+   "id": "53304b90",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93b30f16",
+   "id": "300e8c30",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "39b3bc4a",
+   "id": "0cfc33db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.332028Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.331849Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.336294Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.335703Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.702739Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.702374Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.706296Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.705772Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d95bf1",
+   "id": "9212e1d2",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f85217ff",
+   "id": "cfb4d24c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.338194Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.337707Z",
-     "iopub.status.idle": "2025-01-28T17:21:47.340767Z",
-     "shell.execute_reply": "2025-01-28T17:21:47.340151Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.708211Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.707753Z",
+     "iopub.status.idle": "2025-01-28T18:45:39.710815Z",
+     "shell.execute_reply": "2025-01-28T18:45:39.710254Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25207ced",
+   "id": "233f39e2",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "90b4b896",
+   "id": "7aa9fb85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:47.342664Z",
-     "iopub.status.busy": "2025-01-28T17:21:47.342203Z",
-     "iopub.status.idle": "2025-01-28T17:21:49.986603Z",
-     "shell.execute_reply": "2025-01-28T17:21:49.985997Z"
+     "iopub.execute_input": "2025-01-28T18:45:39.712566Z",
+     "iopub.status.busy": "2025-01-28T18:45:39.712214Z",
+     "iopub.status.idle": "2025-01-28T18:45:42.258444Z",
+     "shell.execute_reply": "2025-01-28T18:45:42.257930Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ddb93f",
+   "id": "c22f4cb4",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464b18d6",
+   "id": "d9670845",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed92b35a",
+   "id": "60518376",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4afe4d5",
+   "id": "3cec66fa",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "09f5e567",
+   "id": "58544418",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:49.988912Z",
-     "iopub.status.busy": "2025-01-28T17:21:49.988437Z",
-     "iopub.status.idle": "2025-01-28T17:21:49.992464Z",
-     "shell.execute_reply": "2025-01-28T17:21:49.991879Z"
+     "iopub.execute_input": "2025-01-28T18:45:42.260559Z",
+     "iopub.status.busy": "2025-01-28T18:45:42.260184Z",
+     "iopub.status.idle": "2025-01-28T18:45:42.263973Z",
+     "shell.execute_reply": "2025-01-28T18:45:42.263469Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f23cffe9f80>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f19c016aac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443aff56",
+   "id": "395b56fd",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3141f7c4",
+   "id": "fad1744b",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fb8d67",
+   "id": "963fdfc5",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac0e05c2",
+   "id": "930efed0",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b917c205",
+   "id": "7dc2b032",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:49.994568Z",
-     "iopub.status.busy": "2025-01-28T17:21:49.994161Z",
-     "iopub.status.idle": "2025-01-28T17:21:49.997233Z",
-     "shell.execute_reply": "2025-01-28T17:21:49.996640Z"
+     "iopub.execute_input": "2025-01-28T18:45:42.265807Z",
+     "iopub.status.busy": "2025-01-28T18:45:42.265473Z",
+     "iopub.status.idle": "2025-01-28T18:45:42.268692Z",
+     "shell.execute_reply": "2025-01-28T18:45:42.268238Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a49d7d88",
+   "id": "07fd6b27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T17:21:49.998967Z",
-     "iopub.status.busy": "2025-01-28T17:21:49.998762Z",
-     "iopub.status.idle": "2025-01-28T17:21:51.054111Z",
-     "shell.execute_reply": "2025-01-28T17:21:51.053585Z"
+     "iopub.execute_input": "2025-01-28T18:45:42.270551Z",
+     "iopub.status.busy": "2025-01-28T18:45:42.270054Z",
+     "iopub.status.idle": "2025-01-28T18:45:43.311531Z",
+     "shell.execute_reply": "2025-01-28T18:45:43.310971Z"
     }
    },
    "outputs": [
